--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,20 @@
 version: '3.8'
 
 services:
+  php:
+    build: ./backend
+    ports:
+      - "8080:80"
+    depends_on:
+      - db
+    environment:
+      - DB_CONNECTION=mysql
+      - DB_HOST=db
+      - DB_DATABASE=programa_estudos
+      - DB_USERNAME=mysql
+      - DB_PASSWORD=mypass
+    volumes:
+      - ./backend:/var/www/html
   db:
     image: mysql:8.0.20
     command: --default-authentication-plugin=mysql_native_password
