--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,21 @@
 version: '3.8'
 
 services:
+#  vue:
+#    build: ./frontend
+#    stdin_open: true
+#    tty: true
+#    volumes:
+#      - ./frontend:/app
+#      - /app/node_modules
+#    ports:
+#      - 80:3000
+#    environment:
+#      - CHOKIDAR_USEPOLLING=true
   php:
     build: ./backend
     ports:
-      - "8080:80"
+      - 8080:80
     depends_on:
       - db
     environment:
@@ -24,11 +35,11 @@ services:
       MYSQL_ROOT_PASSWORD: myrootpass
       MYSQL_DATABASE: programa_estudos
     ports:
-      - "3306:3306"
+      - 3306:3306
   adminer:
     image: adminer:4.7.7-standalone
     ports:
-      - "8081:8080"
+      - 8081:8080
     depends_on:
       - db
   flyway:
