--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,6 +8,13 @@ COPY .docker/000-default.conf /etc/apache2/sites-available/000-default.conf
 
 RUN a2enmod rewrite
 
+RUN docker-php-ext-install mysqli pdo pdo_mysql
+
 RUN pecl install xdebug
 RUN docker-php-ext-enable xdebug
 COPY .docker/xdebug.ini /usr/local/etc/php/conf.d/xdebug.ini
+
+COPY composer.phar ./
+COPY composer.json ./
+COPY composer.lock ./
+RUN php composer.phar install
