--- a/backend/composer.json
+++ b/backend/composer.json
@@ -27,7 +27,8 @@
         "monolog/monolog": "^2.1",
         "php-di/php-di": "^6.1",
         "slim/psr7": "^1.1",
-        "slim/slim": "^4.5"
+        "slim/slim": "^4.5",
+        "ext-pdo": "^1.1"
     },
     "require-dev": {
         "jangregor/phpstan-prophecy": "^0.8.0",
