--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,8 +26,10 @@ services:
       DB_PASSWORD: mypass
       XDEBUG_CONFIG: remote_host=172.17.0.1
       PHP_IDE_CONFIG: "serverName=xdebug-docker"
+      DOCKER : 1
     volumes:
       - ./backend:/var/www/html
+      - /var/www/html/vendor
   db:
     image: mysql:8.0.20
     command: --default-authentication-plugin=mysql_native_password
