[FEAT] Tela de lista de programas de estudo

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,8 @@ FROM php:7.4-apache
 
 RUN apt-get update \
 	&& apt-get install -y \
+	zip \
+	unzip \
 	git
 
 COPY .docker/000-default.conf /etc/apache2/sites-available/000-default.conf
