--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - 80:80
     environment:
       - CHOKIDAR_USEPOLLING=true
+    depends_on:
+      - php
   php:
     build: ./backend
     ports:
