--- a/backend/composer.json
+++ b/backend/composer.json
@@ -23,12 +23,12 @@
     ],
     "require": {
         "php": "^7.2",
+        "ext-PDO": "^7.4",
         "ext-json": "*",
         "monolog/monolog": "^2.1",
         "php-di/php-di": "^6.1",
         "slim/psr7": "^1.1",
-        "slim/slim": "^4.5",
-        "ext-pdo": "^1.1"
+        "slim/slim": "^4.5"
     },
     "require-dev": {
         "jangregor/phpstan-prophecy": "^0.8.0",
