--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       - /var/www/html/vendor
   db:
     image: mysql:8.0.20
+    restart: always
     command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_USER: mysql
